# deal-finder-cli

./: .env.example  .gitignore  AGENTICS_PLAN.md  README.md  alerts.json  pyproject.toml
.github/workflows/: ci.yml  shopping_tracker.yml
deal_finder/: alerts.py  cli.py  deal_agent.py  deal_calendar.yaml  keepa.py  pipeline.py  price_fetcher.py  slickdeals.py  watchlist.py
tests/: test_keepa.py  test_pipeline.py  test_slickdeals.py
