[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "deal-finder-cli"
version = "0.1.0"
description = "Deal intelligence engine — watchlist, price tracking, and buy/hold verdicts"
requires-python = ">=3.11"
dependencies = [
    "shoppingcomparisoncli @ git+https://github.com/nayyarsan/shoppingcomparisoncli.git",
    "rapidfuzz>=3.6",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13.7",
    "feedparser>=6.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
deal-finder = "deal_finder.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
